# axor-eval

./: README.md  pyproject.toml
.github/workflows/: ci.yml
axor_eval/: contracts.py  errors.py
axor_eval/audit/: behavioral_audit.py  budget_audit.py  retrieval_audit.py  tool_audit.py
axor_eval/deprivation/: engine.py
axor_eval/governed/: __init__.py  agent.py  bus.py  handler.py
axor_eval/replay/: player.py  recorder.py
axor_eval/runner/: eval_runner.py  scoring.py
tests/: test_behavioral_audit.py  test_budget_audit.py  test_contracts.py  test_cross_session_taint.py  test_deprivation.py  test_governed.py  test_observe_mode.py  test_replay.py  test_retrieval_audit.py  test_runner.py  test_taint_compressor.py  test_tool_audit.py
