[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-eval"
version = "0.1.0"
description = "Execution-integrity evaluator using fault injection across the agent input perimeter"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agents", "governance", "security", "eval", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "axor-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["axor_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["axor_eval"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["axor_core.*", "axor_sentinel.*"]
ignore_missing_imports = true
